# simulink-mcp-server-skill

./: .gitignore  CHANGELOG.md  FILE_STRUCTURE.md  FUNCTION_ADDITIONS.md  GETTING_STARTED.md  INSTALL.md  LICENSE  PORTABLE_INSTALL.md  QUICK_REFERENCE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VSCODE_SETUP.md  config.local.ps1.example  config.ps1  install.ps1  install_matlab_engine.ps1  pyproject.toml  requirements.lock.txt  start_matlab.bat  start_matlab.ps1  start_mcp_server.bat  start_mcp_server.ps1  test_connection.py  test_interactive_functions.py  test_matlab_functions.py
.agents/: README.md
.agents/skills/: TOOL_COMPATIBILITY.md
.agents/skills/building-simulink-models/: SKILL.md  manifest.yaml
.agents/skills/building-simulink-models/reference/: simscape.md  stateflow.md  system-composer.md
.agents/skills/generate-requirement-drafts/: SKILL.md  manifest.yaml
.agents/skills/generate-requirement-drafts/reference/: slreq-patterns.md  yaml-requirements.md
.agents/skills/matlab-build-app/: SKILL.md  manifest.yaml
.agents/skills/matlab-create-live-script/: SKILL.md  manifest.yaml
.agents/skills/matlab-debugging/: SKILL.md  manifest.yaml
.agents/skills/matlab-install-products/: SKILL.md  manifest.yaml
.agents/skills/matlab-install-products/reference/: linux-macos-steps.md
.agents/skills/matlab-list-products/: SKILL.md
.agents/skills/matlab-map-database-objects/: SKILL.md  manifest.yaml
.agents/skills/matlab-modernize-code/: SKILL.md  manifest.yaml
.agents/skills/matlab-modernize-code/reference/: audio-video-guidance.md  communications-guidance.md  control-systems-guidance.md  simulink-guidance.md  (+7 more)
.agents/skills/matlab-read-database/: SKILL.md  manifest.yaml
.agents/skills/matlab-review-code/: SKILL.md  manifest.yaml
.agents/skills/matlab-testing/: SKILL.md  manifest.yaml
.agents/skills/matlab-use-duckdb/: SKILL.md  manifest.yaml
.agents/skills/matlab-write-database/: SKILL.md  manifest.yaml
.agents/skills/simulating-simulink-models/: SKILL.md  manifest.yaml
.agents/skills/specifying-mbd-algorithms/: SKILL.md  manifest.yaml
.agents/skills/specifying-plant-models/: SKILL.md  manifest.yaml
.agents/skills/testing-simulink-models/: SKILL.md  manifest.yaml
.github/: copilot-instructions.md
.github/instructions/: simulink-mcp.instructions.md
.github/skills/mcp-server-command-management/: SKILL.md
.github/skills/simulink-tool-self-evaluation/: SKILL.md
.github/workflows/: ci.yml  release.yml
config/: copilot.settings.json.example  mcp.full.json.example  mcp.json.example  mcp.open.json.example  mcp.readonly.json.example
docs/: ENTERPRISE_DEPLOYMENT.md  RELEASE_PROCESS.md  SIMULINK_FUNCTION_GAPS.md
examples/: demo.py
registry/: simulink-mcp-server.template.json
src/simulink_mcp_server/: __init__.py  mcp_server.py  server.py
tests/: test_agent_skills.py  test_basic.py  test_mcp_modes.py
(+37 files in other folders)
