[project]
name = "simulink-mcp-server"
version = "0.2.0"
description = "MCP server providing VS Code agents with MATLAB Simulink functionality through shared engine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Simulink MCP Server contributors" },
]
keywords = ["mcp", "matlab", "simulink", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "mcp>=1.23.0,<2.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "setuptools>=80.9.0",
    "starlette>=0.49.1",
    "typing-extensions>=4.0.0",
    "wheel>=0.46.2",
]

[project.scripts]
simulink-mcp-server = "simulink_mcp_server.mcp_server:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "build>=1.2.0",
    "pip-audit>=2.7.0",
    "cyclonedx-bom>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require MATLAB, Simulink, or a shared MATLAB engine",
]
